fix: nav menu was behind some titles

--- a/src/components/slots/AnimatedTitle/AnimatedTitle.scss
+++ b/src/components/slots/AnimatedTitle/AnimatedTitle.scss
@@ -3,7 +3,6 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  z-index: -1;
   
   .animated-item {
     display: inline-block;
