--- a/src/components/ui/NavMenu/NavMenu.scss
+++ b/src/components/ui/NavMenu/NavMenu.scss
@@ -1,6 +1,6 @@
 .nav-menu {
   position: relative;
-
+z-index: 999;
   .nav-menu-btn {
     background-color: $black-secondary;
     border-radius: $border-radius-base;
